# jirapport

./: .gitignore  Cargo.toml  README.md  jira.toml
.github/workflows/: rust.yml
src/: customfields.rs  main.rs
