[package]
name = "jirapport"
version = "0.1.0"
authors = ["abjorck <bjorck@gmail.com>"]
edition = "2018"

[dependencies]
goji = { git = "https://github.com/abjorck/goji.git", features = ['socks', 'rustls'] }
serde_cbor = "0.11.1"
serde_json = "1.0"
serde_derive = "1.0"
prettytable-rs = "^0.8"
toml = "0.5"
serde = "1.0"
